# Note

./: .gitignore  README.md  meson.build  org.lion_claw.note.json
data/: meson.build  org.lion_claw.note.desktop.in  org.lion_claw.note.gschema.xml  org.lion_claw.note.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: Note.cmb  main.c  meson.build  note-application.c  note-application.h  note-preferences.blp  note-preferences.c  note-preferences.h  note-preferences.ui  note-window.blp  note-window.c  note-window.cmb  note-window.h  note-window.ui  note.gresource.xml  note.ui
